# mini-x-messenger

./: CMakeLists.txt  Makefile  README.md
include/: message.hpp
src/: client_receiver.cpp  client_sender.cpp  server.cpp
